--- a/frontend/core/src/main/webapp/static/partials/my/notes.html
+++ b/frontend/core/src/main/webapp/static/partials/my/notes.html
@@ -2,7 +2,7 @@
   <h1 class="text-primary">notes</h1>
 
   <h2>inbox</h2>
-  <div notesfilter="{{notesListFilter}}" notes-list></div>
+  <div notes-list notesfilter="{{notesListFilter}}"></div>
 
   <h2>projects</h2>
 
