--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -72,6 +72,9 @@ ul.em-headers {
 ul {
   list-style-type: none;
 }
+ul.entry-list{
+  padding-left: 0;
+}
 
 input[type="checkbox"]:checked + label {
   text-decoration: line-through;
