--- a/frontend/core/src/main/webapp/static/partials/my/tasks/project.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks/project.html
@@ -8,7 +8,7 @@
 
   <h2>{{project.title}}</h2>
 
-  <ul>
+  <ul class="entry-list">
     <li ng-repeat="task in subtasks" ng-animate="'fade'">
 
       <input type="checkbox" name="checkbox" id="checkbox{{$index}}" ng-model="task.done" ng-change="taskChecked($index)">
