--- a/frontend/core/src/main/webapp/static/partials/my/tasks/context.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks/context.html
@@ -8,7 +8,8 @@
 
   <h2>@{{context.title}}</h2>
 
-  <ul>
+  <ul class="entry-list">
+
     <li ng-repeat="task in subtasks" ng-animate="'fade'">
 
       <input type="checkbox" name="checkbox" id="checkbox{{$index}}" ng-model="task.done" ng-change="taskChecked($index)">
@@ -16,6 +17,7 @@
 
       <div task-content ng-show="showMe" ></div>
     </li>
+
   </ul>
 
 </div>
