--- a/backend/src/main/resources/templates/requestInviteConfirmation.html
+++ b/backend/src/main/resources/templates/requestInviteConfirmation.html
@@ -414,7 +414,7 @@
                             <td class="mcnImageContent" valign="top" style="padding-right: 9px;padding-left: 9px;padding-top: 0;padding-bottom: 0;text-align: center;border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;">
 
 
-                                        <p align="center" alt="" width="376" style="font-size: 180%; color: #228fd7; font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight','HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif; font-weight: 100; letter-spacing: 9px" class="heading">simplify your life</p>
+                                        <p align="center" alt="" width="376" style="font-size: 180%; color: #228fd7; font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight','HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif; font-weight: 100; letter-spacing: 9px;" class="heading">simplify your life</p>
                             </td>
                         </tr>
                     </tbody></table>
