Fluid container for full width.

--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -21,10 +21,12 @@ html {
   height: 100%;
 }
 
-.container {
-  position: relative;
-  width: 100%;
+.container-fluid {
   height: 100%;
+}
+
+.carousel-slides {
+  min-height: 100%;
 }
 
 .row-fluid {
