Full width with Twitter Bootstrap 3.

--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -21,9 +21,13 @@ html {
   height: 100%;
 }
 
-.container-fluid {
-  height: 100%;
+.container {
+  max-width:100%;
+  padding:0;
+  height:100%;
 }
+.row{
+  height:100%;}
 
 .carousel-slides {
   min-height: 100%;
