Page width adjustment.

--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -22,20 +22,18 @@ html {
 }
 
 .container {
-  max-width:100%;
-  padding:0;
-  height:100%;
+  max-width: 100%;
+  padding: 0;
+  height: 100%;
 }
-.row{
-  height:100%;}
+
+.row {
+  height: 100%;
+  margin: 0;
+}
 
 .carousel-slides {
   min-height: 100%;
-}
-
-.row-fluid {
-  width: 100%;
-  height: 100%;
 }
 
 .em-page {
