--- a/frontend/core/src/main/webapp/static/partials/my/notes.html
+++ b/frontend/core/src/main/webapp/static/partials/my/notes.html
@@ -1,4 +1,4 @@
-<div ng-controller="NotesController" class="em-animate" ng-animate="{{pageAnimation}}">
+<div ng-controller="NotesController">
   <h1 class="text-primary">notes</h1>
 
   <h2>inbox</h2>
