--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -22,23 +22,22 @@ html {
 }
 
 .container {
-  max-width: 100%;
-  padding: 0;
+  width: 100%;
   height: 100%;
 }
 
 .row {
+  width: 100%;
   height: 100%;
-  margin: 0;
-}
-
-.carousel-slides {
-  min-height: 100%;
 }
 
 .em-page {
   width: 100%;
   height: 100%;
+}
+
+.carousel-slides {
+  min-height: 100%;
 }
 
 .em-animate {
@@ -86,11 +85,17 @@ input[type="checkbox"]:checked + label {
   color: gray;
 }
 
+.rn-carousel-animate {
+  -webkit-transition: -webkit-transform cubic-bezier(0.250, 0.460, 0.450, 0.940) .2s;
+  -moz-transition: -moz-transform cubic-bezier(0.250, 0.460, 0.450, 0.940) .2s;
+  transition: transform cubic-bezier(0.250, 0.460, 0.450, 0.940) .2s;
+}
+
 .fade-hide, .fade-show {
-  -webkit-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s;
-  -moz-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s;
-  -o-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s;
-  transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s;
+  -webkit-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) .3s;
+  -moz-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) .3s;
+  -o-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) .3s;
+  transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) .3s;
 }
 
 .fade-hide {
