--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -5,6 +5,13 @@ body {
   height: 100%;
   font-size: 24px;
 }
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
 
 h1 {
   font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
@@ -24,11 +31,13 @@ html {
 .container {
   width: 100%;
   height: 100%;
+  padding: 0;
 }
 
 .row {
   width: 100%;
   height: 100%;
+  margin: 0;
 }
 
 .em-page {
