Item list actions in single row.

--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -5,6 +5,7 @@ body {
   height: 100%;
   font-size: 24px;
 }
+
 img {
   display: block;
   margin-left: auto;
@@ -46,6 +47,10 @@ html {
 }
 
 .carousel-slides {
+  min-height: 100%;
+}
+
+.rn-carousel-container {
   min-height: 100%;
 }
 
