--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -51,7 +51,11 @@ html {
 }
 
 .rn-carousel-container {
-  min-height: 100%;
+  min-height: 568px;
+}
+
+.rn-carousel-slides {
+  min-height: 568px;
 }
 
 .em-animate {
