Carousel slide height.

--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -51,11 +51,11 @@ html {
 }
 
 .rn-carousel-container {
-  min-height: 568px;
+  min-height: 100%;
 }
 
 .rn-carousel-slides {
-  min-height: 568px;
+  min-height: 100%;
 }
 
 .em-animate {
@@ -73,6 +73,7 @@ label {
 }
 
 .em-front {
+  min-height: 100%;
   text-align: center;
 }
 
