Removed margin from slides.

--- a/frontend/core/src/main/webapp/static/partials/myPages.html
+++ b/frontend/core/src/main/webapp/static/partials/myPages.html
@@ -2,13 +2,13 @@
 
   <ul rn-carousel rn-carousel-index="slide">
     <li>
-      <div my-notes>
+      <div class="carousel-slide" my-notes>
     </li>
     <li>
-      <div my>
+      <div class="carousel-slide" my>
     </li>
     <li>
-      <div my-tasks>
+      <div class="carousel-slide" my-tasks>
     </li>
   </ul>
 
