--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -41,6 +41,8 @@ html {
   margin: 0;
 }
 
+.col-xs-12, .col-sm-6, .col-md-8{padding:0;}
+
 .em-page {
   width: 100%;
   height: 100%;
@@ -48,6 +50,11 @@ html {
 
 .carousel-slides {
   min-height: 100%;
+}
+
+.carousel-slide {
+  padding-left:15px;
+  padding-right:15px;
 }
 
 .rn-carousel-container {
