Slide padding and margin fixes.

--- a/frontend/core/src/main/webapp/static/partials/my/notes.html
+++ b/frontend/core/src/main/webapp/static/partials/my/notes.html
@@ -1,4 +1,4 @@
-<div ng-controller="NotesController">
+<div class="em-slide" ng-controller="NotesController">
   <h1 class="text-primary">notes</h1>
 
   <h2>inbox</h2>
