--- a/frontend/core/src/main/webapp/static/partials/myPages.html
+++ b/frontend/core/src/main/webapp/static/partials/myPages.html
@@ -1,14 +1,14 @@
-<div class="carousel-slides">
+<div class="em-slides">
 
   <ul rn-carousel rn-carousel-index="slide">
     <li>
-      <div class="carousel-slide" my-notes>
+      <div my-notes>
     </li>
     <li>
-      <div class="carousel-slide" my>
+      <div my>
     </li>
     <li>
-      <div class="carousel-slide" my-tasks>
+      <div my-tasks>
     </li>
   </ul>
 
