--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -41,20 +41,22 @@ html {
   margin: 0;
 }
 
-.col-xs-12, .col-sm-6, .col-md-8{padding:0;}
+.col-xs-12, .col-sm-6, .col-md-8 {
+  padding: 0;
+}
 
 .em-page {
   width: 100%;
   height: 100%;
 }
 
-.carousel-slides {
+.em-slides {
   min-height: 100%;
 }
 
-.carousel-slide {
-  padding-left:15px;
-  padding-right:15px;
+.em-slide {
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .rn-carousel-container {
