--- a/frontend/core/src/main/webapp/static/partials/my/notes/edit.html
+++ b/frontend/core/src/main/webapp/static/partials/my/notes/edit.html
@@ -1,4 +1,4 @@
-<div class="em-animate" ng-animate="{{pageAnimation}}">
+<div class="em-animate em-slide" ng-animate="{{pageAnimation}}">
 
   <button type="button" class="btn btn-default pull-right" ng-click="undoNoteEdit()">
     undo
