Carousel slide data loading fixes.

--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -1,4 +1,4 @@
-<div class="em-slide">
+<div class="em-slide" ng-controller="MyController">
 
   <div class="em-front">
     <div ng-hide="newItem.title">
