Toggle item actions.

--- a/frontend/core/src/main/webapp/static/partials/templates/itemsList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/itemsList.html
@@ -1,10 +1,11 @@
 <div>
-  <div ng-transclude></div>
   <ul>
 
     <li ng-repeat="item in items | filter:newItem" ng-model="activeItem" ng-animate="'fade'">
 
-      <span>{{item.title}}</span><a class="text-muted" href="" ng-click="editNewTag()"> tag</a><a class="text-muted" href="my/notes/new/{{item.uuid}}" ng-click="setActiveItem(item)"> note</a><a class="text-muted" href="my/tasks/new/{{item.uuid}}" ng-click="setActiveItem(item)"> task</a><div ng-show="showEditNewTag" new-tag ng-animate="'fade'"></div>
+      <span ng-click="toggleItemActions()">{{item.title}}</span>
+      
+      <div item-actions ng-show="showItemActions"></div>
 
     </li>
   </ul>
