--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -113,6 +113,13 @@ input[type="checkbox"]:checked + label {
   color: gray;
 }
 
+.active-list-item {
+  margin-left: -55px;
+  padding-left: 55px;
+  margin-right: -15px;
+  background: #EBEBEB;
+}
+
 .rn-carousel-animate {
   -webkit-transition: -webkit-transform cubic-bezier(0.250, 0.460, 0.450, 0.940) .2s;
   -moz-transition: -moz-transform cubic-bezier(0.250, 0.460, 0.450, 0.940) .2s;
