--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -108,7 +108,7 @@ ul.entry-list {
   padding-left: 0;
 }
 
-input[type="checkbox"]:checked + label {
+input[type="checkbox"].task-checkbox:checked + label {
   text-decoration: line-through;
   color: gray;
 }
