--- a/frontend/core/src/main/webapp/static/partials/templates/itemsList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/itemsList.html
@@ -6,7 +6,7 @@
         <div ng-class="selected" ng-click="toggleItemActions()">
           <span>{{item.title}}</span>
         </div>
-        <div item-actions ng-show="showItemActions"></div>
+        <div item-actions ng-show="showItemActions" ng-animate="'fade'"></div>
 
     </li>
   </ul>
