--- a/frontend/core/src/main/webapp/static/partials/templates/items/itemActions.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/items/itemActions.html
@@ -18,6 +18,6 @@
     added
   </button>
 
-  <div ng-show="showEditNewTag" new-tag ng-animate="'fade'"></div>
+  <div ng-show="showEditNewTag" new-tag></div>
 
 </div>
