--- a/frontend/core/src/main/webapp/static/partials/templates/tasksList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasksList.html
@@ -1,11 +1,12 @@
 <div>
 
   <ul>
-    <li ng-show="tasksListFilter" ng-repeat="task in tasks | filter:newItem" ng-animate="'fade'">
+    <li ng-show="tasksListFilter" ng-repeat="task in tasks | filter:newItem">
 
       <input type="checkbox" name="checkbox" id="checkbox{{$index}}" class="task-checkbox" ng-checked="task.completed" ng-click="taskChecked($index)">
       <label for="checkbox{{$index}}" ng-click="expandTask()">{{task.title}}</label>
-      <div task-content ng-show="showMe" ng-animate="'fade'"></div>
+
+      <div task-content ng-show="showMe"></div>
 
     </li>
   </ul>
