--- a/frontend/core/src/main/webapp/static/partials/templates/itemsList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/itemsList.html
@@ -1,12 +1,13 @@
 <div>
   <ul>
 
-    <li class="em-li" ng-repeat="item in items | filter:newItem" ng-model="activeItem" ng-animate="'fade'">
+    <li class="em-li" ng-repeat="item in items | filter:newItem" ng-model="activeItem">
 
       <div ng-class="selected" ng-click="toggleItemActions()">
         <span>{{item.title}}</span>
       </div>
-      <div item-actions ng-show="showItemActions" ng-animate="'fade'"></div>
+
+      <div item-actions ng-show="showItemActions"></div>
 
     </li>
   </ul>
