--- a/frontend/core/src/main/webapp/static/partials/templates/projectsList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/projectsList.html
@@ -1,5 +1,5 @@
 <ul>
-  <li ng-repeat="project in projects" ng-animate="'fade'">
+  <li ng-repeat="project in projects">
 
     <span ng-click="setActiveItem(project)"><a class="text-muted" href="my/tasks/project/{{project.uuid}}">{{project.title}}</a></span>
 
