--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -10,41 +10,51 @@ h1 {
   font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
   font-weight: 100;
 }
+
 h2, h3, h4, h5, h6 {
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 300;
 }
+
 html {
   width: 100%;
   height: 100%;
 }
+
 .container {
   width: 100%;
   height: 100%;
   padding: 0;
 }
+
 .row {
   width: 100%;
   height: 100%;
   margin: 0;
 }
+
 .col-xs-12, .col-sm-6, .col-md-8 {
   padding: 0;
 }
+
 .em-page {
   width: 100%;
   height: 100%;
 }
+
 .em-slides {
   min-height: 100%;
 }
+
 .em-slide {
   padding-left: 15px;
   padding-right: 15px;
 }
+
 .rn-carousel-container {
   min-height: 100%;
 }
+
 .rn-carousel-slides {
   min-height: 100%;
 }
@@ -53,40 +63,54 @@ html {
   width: 100%;
   height: 100% !important;
 }
+
 label {
   font-weight: normal;
 }
+
 .em-front {
   min-height: 100%;
   text-align: center;
 }
+
 .em-anchor {
   padding-top: 30px;
 }
+
 .em-note, .em-core {
   padding-top: 80px;
 }
+
 ul.em-headers {
   list-style-image: none;
   list-style-type: none;
   margin-left: 0;
 }
+
 ul {
   list-style-type: none;
 }
+
 ul.entry-list {
   padding-left: 0;
 }
+
 input[type="checkbox"].task-checkbox:checked + label {
   text-decoration: line-through;
   color: gray;
 }
+
+.active {
+  background: #EBEBEB;
+}
+
 .active-list-item {
   margin-left: -55px;
   padding-left: 55px;
   margin-right: -15px;
   background: #EBEBEB;
 }
+
 .rn-carousel-animate {
   -webkit-transition: -webkit-transform cubic-bezier(0.250, 0.460, 0.450, 0.940) .2s;
   -moz-transition: -moz-transform cubic-bezier(0.250, 0.460, 0.450, 0.940) .2s;
