Unsorted item style.

--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -20,7 +20,7 @@
 
   </div>
 
-  <h2><a class="text-muted" href="" ng-click="toggleItemsList()">inbox</a></h2>
+  <h2><a class="text-muted" href="" ng-click="toggleItemsList()">unsorted</a></h2>
   <div ng-show="showItemsList" items-list itemsfilter="newItem.title"></div>
 
   <h2><a class="text-muted" href="my/notes">notes</a></h2>
