--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -101,15 +101,14 @@ input[type="checkbox"].task-checkbox:checked + label {
   color: gray;
 }
 
-.active {
-  background: #EBEBEB;
-}
-
 .active-list-item {
+  border-style:solid none;
+  border-width:1px;
+  border-color:gray;
+  padding-bottom:10px;
   margin-left: -55px;
   padding-left: 55px;
   margin-right: -15px;
-  background: #EBEBEB;
 }
 
 .rn-carousel-animate {
