Modify new item.

--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -91,6 +91,9 @@ ul.em-headers {
 ul {
   list-style-type: none;
 }
+.item-actions {
+  padding-bottom: 10px;
+}
 
 ul.entry-list {
   padding-left: 0;
@@ -102,10 +105,9 @@ input[type="checkbox"].task-checkbox:checked + label {
 }
 
 .active-list-item {
-  border-style:solid none;
-  border-width:1px;
-  border-color:gray;
-  padding-bottom:10px;
+  border-style: solid none;
+  border-width: 1px;
+  border-color: #8E8E93;
   margin-left: -55px;
   padding-left: 55px;
   margin-right: -15px;
