--- a/frontend/core/src/main/webapp/static/partials/templates/items/itemActions.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/items/itemActions.html
@@ -1,21 +1,15 @@
-<div>
+<div class="item-actions">
 
   <button type="button" class="btn btn-default" ng-click="editNewTag()">
     tag
   </button>
 
-  <button type="button" class="btn btn-default" ng-hide="itemToNoteSuccess" ng-click="itemToNote()">
+  <button type="button" class="btn btn-default" ng-click="itemToNote()">
     note
   </button>
-  <button type="button" class="btn btn-success" ng-show="itemToNoteSuccess" ng-click="itemToNote()">
-    added
-  </button>
 
-  <button type="button" class="btn btn-default" ng-hide="itemToTaskSuccess" ng-click="itemToTask()">
+  <button type="button" class="btn btn-default" ng-click="itemToTask()">
     task
-  </button>
-  <button type="button" class="btn btn-success" ng-show="itemToTaskSuccess" ng-click="itemToTask()">
-    added
   </button>
 
   <div ng-show="showEditNewTag" new-tag></div>
