--- a/frontend/core/src/main/webapp/static/partials/templates/itemsList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/itemsList.html
@@ -1,5 +1,10 @@
 <div>
-  <ul>
+
+  <div>
+    <h2><a class="text-muted" href="" ng-click="toggleItemsList()">unsorted</a><span class="pull-right"><small>{{completed}}</small></span></h2>
+  </div>
+
+  <ul ng-show="showItemsList">
 
     <li class="em-li" ng-class="selected" ng-repeat="item in items | filter:newItem" ng-model="activeItem">
 
