--- a/frontend/core/src/main/webapp/static/partials/templates/items/itemActions.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/items/itemActions.html
@@ -4,11 +4,11 @@
     tag
   </button>
 
-  <button type="button" class="btn btn-default" ng-click="itemToNote()">
+  <button type="button" class="btn btn-default" ng-click="itemToNote(item)">
     note
   </button>
 
-  <button type="button" class="btn btn-default" ng-click="itemToTask()">
+  <button type="button" class="btn btn-default" ng-click="itemToTask(item)">
     task
   </button>
 
