--- a/frontend/core/src/main/webapp/static/partials/templates/itemsList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/itemsList.html
@@ -1,7 +1,7 @@
 <div>
 
   <div>
-    <h2><a class="text-muted" href="" ng-click="toggleItemsList()">unsorted</a><span class="pull-right"><small>{{completed}}</small></span></h2>
+    <h2><a ng-show="items!=0" class="text-muted" href="" ng-click="toggleItemsList()">unsorted</a><span class="pull-right"><small>{{completed}}</small></span></h2>
   </div>
 
   <ul ng-show="showItemsList">
