Removed AngularUI Bootstrap. Tasks refactoring.

--- a/frontend/core/src/main/webapp/static/partials/my/tasks.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks.html
@@ -1,4 +1,4 @@
-<div class="em-slide" ng-controller="TasksController">
+<div class="em-slide">
   <button type="button" class="btn btn-default pull-right" ng-click="addNew()">
     +
   </button>
