Directive refactoring. Moved forked angular-carousel.js from lib folder into project.

--- a/frontend/core/src/main/webapp/static/partials/my/tasks.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks.html
@@ -5,21 +5,18 @@
 
   <h1 class="text-primary">tasks</h1>
 
-  <div>
+  <div tasks-list tasksfilter="{{tasksListFilter}}">
     <h2>inbox</h2>
-    <div tasks-list tasksfilter="{{tasksListFilter}}"></div>
   </div>
 
-  <div>
+  <div projects-list>
     <h2>projects</h2>
-    <div projects-list></div>
   </div>
 
   <h2>areas</h2>
 
-  <div>
+  <div contexts-list>
     <h2>contexts</h2>
-    <div contexts-list></div>
   </div>
 
 </div>
