--- a/frontend/core/src/main/webapp/static/partials/templates/items/itemsList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/items/itemsList.html
@@ -1,10 +1,8 @@
 <div>
 
-  <div>
-    <h2><a ng-show="items!=0" class="text-muted" href="" ng-click="toggleItemsList()">unsorted</a><span class="pull-right"><small>{{completed}}</small></span></h2>
-  </div>
+  <div ng-transclude></div>
 
-  <ul ng-show="showItemsList">
+  <ul class="list-unstyled" ng-show="showItemsList">
 
     <li class="em-li" ng-class="selected" ng-repeat="item in items | filter:newItem" ng-model="activeItem">
 
