--- a/frontend/core/src/main/webapp/static/partials/my/notes.html
+++ b/frontend/core/src/main/webapp/static/partials/my/notes.html
@@ -1,8 +1,9 @@
 <div class="em-slide">
   <h1 class="text-primary">notes</h1>
 
-  <h2>inbox</h2>
-  <div notes-list notesfilter="{{notesListFilter}}"></div>
+  <div notes-list notesfilter="{{notesListFilter}}">
+    <h2>inbox</h2>
+  </div>
 
   <h2>projects</h2>
 
