--- a/frontend/core/src/main/webapp/static/less/carousel.less
+++ b/frontend/core/src/main/webapp/static/less/carousel.less
@@ -1,8 +1,8 @@
-.rn-carousel-container {
+.em-carousel-container {
   min-height: 100%;
   overflow: hidden;
 }
-ul.rn-carousel-slides {
+ul.em-carousel-slides {
   min-height: 100%;
   position: relative;
   white-space: nowrap;
@@ -13,7 +13,7 @@ ul.rn-carousel-slides {
   padding: 0;
   margin: 0;
 }
-ul.rn-carousel-slides li {
+ul.em-carousel-slides li {
   white-space: normal;
   vertical-align:top;
   display: inline-block;
@@ -22,19 +22,19 @@ ul.rn-carousel-slides li {
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 } 
-.rn-carousel-animate {
+.em-carousel-animate {
   -webkit-transition: -webkit-transform cubic-bezier(0.250, 0.460, 0.450, 0.940) .2s;
   -moz-transition: -moz-transform cubic-bezier(0.250, 0.460, 0.450, 0.940) .2s;
   transition: transform cubic-bezier(0.250, 0.460, 0.450, 0.940) .2s;
 }
-.rn-carousel-noanimate {
+.em-carousel-noanimate {
   -webkit-transition: none;
   -moz-transition: none;
   -ms-transition: none;
   -o-transition: none;
   transition: none;
 }
-.rn-carousel-indicator {
+.em-carousel-indicator {
   width: 100%;
   text-align:center;
   position:relative;
@@ -43,11 +43,11 @@ ul.rn-carousel-slides li {
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.6);
 }
-.rn-carousel-indicator span {
+.em-carousel-indicator span {
   padding: 0 5px;
   color: #333;
   transition: color .2s ease-out;
 }
-.rn-carousel-indicator span.active {
+.em-carousel-indicator span.active {
   color:white;
 }
