--- a/frontend/core/src/main/webapp/static/partials/my/tasksSlides.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasksSlides.html
@@ -1,6 +1,6 @@
 <div class="em-slides">
 
-  <ul rn-carousel rn-carousel-index="slide">
+  <ul em-carousel em-carousel-index="slide">
     <li>
       <div my>
     </li>
