Implementing new note.

--- a/frontend/core/src/main/webapp/static/partials/my/notes.html
+++ b/frontend/core/src/main/webapp/static/partials/my/notes.html
@@ -1,5 +1,9 @@
 <div class="em-slide">
-  
+
+  <button type="button" class="btn btn-default pull-right" ng-click="addNew()">
+    +
+  </button>
+
   <h1 class="text-primary">notes</h1>
 
   <div notes-list notesfilter="{{notesListFilter}}">
@@ -9,5 +13,5 @@
   <h2>projects</h2>
 
   <h2>areas</h2>
-  
+
 </div>
