--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/tasksList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/tasksList.html
@@ -6,7 +6,8 @@
     <li ng-show="tasksListFilter" ng-repeat="task in tasks | filter:newItem">
 
       <input type="checkbox" name="checkbox" id="checkbox{{$index}}" class="task-checkbox" ng-checked="task.completed" ng-click="taskChecked($index)">
-      <label for="checkbox{{$index}}" eat-click ng-click="expandTask()">{{task.title}}</label>
+
+      <span ng-click="expandTask()">{{task.title}}</span>
 
       <div task-content ng-show="showTaskContent"></div>
 
